salesforce/force-app/main/default/objects/Meeting__c/Meeting__c.object-meta.xml
<CustomObject>
    <label>Meeting</label>
    <pluralLabel>Meetings</pluralLabel>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Maps to the Zoho Meetings module: a scheduled meeting tied to an Account and a Campaign, with the same sync-state vocabulary the calendar-reconciliation work uses (in_sync, outdated, only in CRM, only in calendar).</description>
</CustomObject>