salesforce/force-app/main/default/objects/Meeting__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Lookup</type>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The originating trade-show Campaign, matching the Zoho Meetings.Campaign lookup. Uses the standard Salesforce Campaign object rather than a custom one.</description>
</CustomField>