salesforce/force-app/main/default/objects/Meeting__c/fields/External_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Event_Id__c</fullName>
    <label>External Event Id</label>
    <type>Text</type>
    <length>60</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>The calendar-side event id. External Id so the delta-sync upsert (DeltaSyncJob) can match on it directly.</description>
</CustomField>