salesforce/force-app/main/default/objects/Meeting__c/fields/Meeting_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Meeting_DateTime__c</fullName>
    <label>Meeting Date/Time</label>
    <type>DateTime</type>
</CustomField>