salesforce/force-app/main/default/objects/Meeting__c/fields/Meeting_Duration__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Duration__c</fullName>
    <label>Duration (minutes)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>