salesforce/force-app/main/default/objects/Meeting__c/fields/Meeting_Room__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room__c</fullName>
    <label>Meeting Room</label>
    <type>Text</type>
    <length>100</length>
</CustomField>