salesforce/force-app/main/default/objects/Meeting__c/fields/Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Status__c</fullName>
    <label>Meeting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Booked</fullName><default>false</default><label>Booked</label></value>
            <value><fullName>Planned</fullName><default>false</default><label>Planned</label></value>
            <value><fullName>Held</fullName><default>false</default><label>Held</label></value>
            <value><fullName>Finished</fullName><default>false</default><label>Finished</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>