salesforce/force-app/main/default/objects/Meeting__c/fields/Sync_State__c.field-meta.xml
<CustomField>
    <fullName>Sync_State__c</fullName>
    <label>Sync State</label>
    <type>Picklist</type>
    <description>Mirrors the Zoho calendar-reconciliation vocabulary: in_sync, outdated, only_in_crm, only_in_calendar, incorrect.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>in_sync</fullName><default>true</default><label>In sync</label></value>
            <value><fullName>outdated</fullName><default>false</default><label>Outdated</label></value>
            <value><fullName>only_in_crm</fullName><default>false</default><label>Only in CRM</label></value>
            <value><fullName>only_in_calendar</fullName><default>false</default><label>Only in calendar</label></value>
            <value><fullName>incorrect</fullName><default>false</default><label>Incorrect</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>